--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,16 @@ li {
   display: flex;
   justify-content: center;
 }
+
+.morse-input-area,
+.morse-output-area {
+  margin: 10px auto;
+  border: 3px solid gray;
+  width: 95vw;
+  height: 250px;
+}
+
+.morse-code-container div form input {
+  width: 100%;
+  height: 244px;
+}
