--- a/fidget_page/assets/css/style.css
+++ b/fidget_page/assets/css/style.css
@@ -42,6 +42,7 @@ body {
   height: 100vh;
   opacity: 1;
   background-color: black;
+  cursor: auto;
 }
 
 .welcome-page {
@@ -60,6 +61,7 @@ body {
   border: 0;
   background-color: black;
   color: rgba(188, 194, 200, 0.793);
+  cursor: auto;
 }
 
 .menu-box {
@@ -320,8 +322,7 @@ body {
 
 /* instakilogram */
 .instakilogram-area {
-  /* display: none; */
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   position: absolute;
@@ -334,7 +335,10 @@ body {
   min-height: 410px;
   border-radius: 20px;
   background-color: antiquewhite;
-  overflow: scroll;
+}
+
+.instakilogram-area>.wrapper {
+  position: relative;
 }
 
 .instakilogram-login-box {
@@ -458,11 +462,19 @@ body {
   margin: 26px 40px 8px;
 }
 
+.login-error-text {
+  display: none;
+  text-align: center;
+  color: #ed4956;
+  font-size: 14px;
+  line-height: 18px;
+}
+
 .saved-id {
   display: none;
   position: absolute;
-  left: 30%;
-  top: 42%;
+  left: 20%;
+  top: 45%;
   padding: 5px 10px;
   border-radius: 5px;
   background-color: #333;
@@ -476,4 +488,232 @@ body {
 .saved-id>p {
   margin-top: 5px;
   font-size: 12px;
+}
+
+.insta-contents {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  height: 500px;
+  background-color: rgb(250, 250, 250);
+  overflow: scroll;
+}
+
+.insta-contents__header {
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
+  background-color: rgb(250, 250, 250);
+}
+
+.insta-contents__header-left {
+  display: flex;
+  align-items: center;
+  padding: 14px 4px 14px 16px;
+}
+
+.insta-contents__header-left>img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+.insta-contents__header-left>p {
+  margin-left: 12px;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 18px;
+}
+
+.insta-contents__header-right {
+  display: flex;
+  width: 48px;
+  height: 48px;
+  justify-content: center;
+  align-items: center;
+}
+
+.insta-contents__header-right>i {
+  font-size: 24px;
+  width: 24px;
+  height: 24px;
+  padding-top: 5px;
+}
+
+.insta-contents__images {
+  width: 350px;
+  height: 262px;
+}
+
+.insta-contents__images>img {
+  width: 350px;
+  height: 262px;
+  object-fit: cover;
+}
+
+.insta-contents__footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.insta-contents__footer__button {
+  display: flex;
+  justify-content: space-between;
+  padding: 6px 8px 8px;
+}
+
+.insta-contents__footer__button i {
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.insta-contents__footer__button .fa-regular:hover {
+  color: gray;
+}
+
+.fa-solid.hart-button {
+  animation: click-hart 0.2s alternate ease-in;
+  color: rgb(237, 73, 86);
+}
+
+@keyframes click-hart {
+  0% {
+    transform: scale(1.2);
+    color: rgb(237, 73, 86);
+  }
+
+  50% {
+    transform: scale(1.15);
+    color: rgb(237, 73, 86);
+  }
+
+  100% {
+    transform: scale(1.0);
+    color: rgb(237, 73, 86);
+  }
+}
+
+
+
+.insta-contents__footer__like,
+.insta-contents__footer__text {
+  display: flex;
+  padding: 0 16px;
+}
+
+.insta-contents__footer__like-imgs {
+  width: 50px;
+  height: 20px;
+  margin-right: 4px;
+}
+
+.insta-contents__footer__like-text {
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.insta-contents__footer__text {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+}
+
+.insta-contents-text {
+  width: 100%;
+  font-size: 14px;
+  line-height: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  display: -webkit-box;
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: wrap;
+}
+
+.detail-view-text {
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* display: none; */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  /* 여기에요 여기!!!!!!!!!!!!!!! */
+  white-space: nowrap;
+  position: absolute;
+  left: 145px;
+  bottom: 0;
+  color: rgb(142, 142, 142);
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.detail-view-text:hover {
+  color: rgb(222, 220, 220);
+}
+
+.tag {
+  color: rgb(0, 55, 107);
+}
+
+.insta-contents__footer__comment {
+  display: flex;
+  padding: 6px 16px;
+  margin-top: 10px;
+  border-top: 1px solid rgb(239, 239, 239);
+  border-bottom: 1px solid rgb(220, 220, 220);
+}
+
+.insta-contents__footer__comment>i {
+  font-size: 24px;
+  padding: 8px 16px 8px 0;
+}
+
+.insta-contents__comment-form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.insta-contents__comment-input {
+  width: 100%;
+  border: 0;
+  background-color: rgb(250, 250, 250);
+  font-size: 14px;
+  line-height: 18px;
+}
+
+.insta-contents__comment-button {
+  white-space: nowrap;
+  border: 0;
+  background-color: transparent;
+  color: rgba(0, 149, 256, .4);
+  font-weight: 600;
 }
