instakilogram 댓글이 보이지 않는 오류 수정

--- a/fidget_page/assets/css/style.css
+++ b/fidget_page/assets/css/style.css
@@ -668,8 +668,7 @@ body::-webkit-scrollbar {
 }
 
 .insta-comment-area {
-  /* display: flex; */
-  display: none;
+  display: flex;
   flex-direction: column;
 }
 
