실패한 모듈화

--- a/개인연습페이지/components/moduleItem/moduleitem.html
+++ b/개인연습페이지/components/moduleItem/moduleitem.html
@@ -1,5 +1,9 @@
-<body>
-  <div class="test">나는 테스트용 모듈입니다.</div>
-
-  <script src="../../moduleItem.js"></script>
-</body>
+<div class="testModule">
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+  <p class="testText">나는 테스트용 모듈입니다.</p>
+</div>
